k8s/jaeger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
spec:
  selector:
    app: jaeger
  ports:
  - port: 16686
    targetPort: 16686
  - port: 6831
    targetPort: 6831
    protocol: UDP
  - port: 14268
    targetPort: 14268
