k8s/organization-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: organization
spec:
  selector:
    app: organization
  ports:
  - port: 80
    targetPort: 80
