k8s/profile-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile
spec:
  selector:
    app: profile
  ports:
  - port: 80
    targetPort: 80
