k8s/rabbit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbit
spec:
  selector:
    app: rabbit
  ports:
  - port: 5672
    targetPort: 5672
  - name: management
    port: 15672
    targetPort: 15672
